
2001-10-23 Kevin A. Lenzo <lenzo@cs.cmu.edu>
	* Made all error, warnings and info messages use the E_* macros
	  in err.[ch].  This will make logmsg.[ch] irrelevant.
	* Added error verbage to report more in several places,
	  particularly in time_align.c.  Forced alignments were failing
	  for people without apparent error; this is now reported with
	  diagnosis.

2001-10-26 Kevin A. Lenzo <lenzo@cs.cmu.edu>
	* Fixed an error in raw2cep that prevented sphinx2 from reading
	  the output .mfc files.
	* Added dict_free to dict.c and dict.h for people who are 
	  changing language models at run-time and want to free the
	  prior dictionary to save memory.
	
2001-11-06 Kevin A. Lenzo <lenzo@cs.cmu.edu>
	* Patch supplied by rkm (Ravi) for search.c fixes a serious error
	  in search

2001-12-06 Kevin A. Lenzo <lenzo@cs.cmu.edu>
	* TCP server fixes in sphinx2-server (server.c, srvcore.c)
	* Applied two patches from Thomas K. Harris <tkharris@cs.cmu.edu>
	  - overflow check in log.h ADD macro, topN normalization fix
	* Added win32 examples to EXTRA_DIST so they get included
	* Checks and patches from Evandro Gouvea <egouvea@cs.cmu.edu> for
	  win32 issues.
	  - maintenance fixes for cygwin and visual studio builds
	  - addition of example batch files
	  - projects for each example program
	* Fixes for Solaris from awb <awb@cs.cmu.edu>, though this
	  probably still requires some tweaking.
	* Makefile.am whitespace changes, small line continuation fix

2001-12-07 Kevin A. Lenzo <lenzo@cs.cmu.edu>
	* Consolidate byte order macros into byteorder.h.  Note
	  that SWAPL and SWAP_L are both present and used (as reversed 
	  senses) and this will have to be cleaned up. 
	* Add __BIG_ENDIAN__ definition in configure.in
	* Changed all unigram_t.wid to unigram_t.mapid (lm_3g)
	* Define NULL for systems that don't (sun4m).
	* Added headers, etc for sun4.  Everything now compiles
	  under SunOS except the client/server code which can
	  be commented out of the Makefile.